--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,33 +10,35 @@
     <link rel="stylesheet" href="https://use.typekit.net/gwe7loo.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <section class="container">
         <div class="output">
-            <div class="previous-operand">123+</div>
-            <div class="current-operand">456</div>
+            <div data-previousOperand class="previous-operand"></div>
+            <div data-currentOperand class="current-operand"></div>
         </div>
-        <button>AC</button>
-        <button>DEL</button>
-        <button>%</button>
-        <button>÷</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>*</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
-        <button>0</button>
-        <button>.</button>
-        <button class="span-two">=</button>
+        <button data-allCleared>AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>%</button>
+        <button data-operation>÷</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>-</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>+</button>
+        <button data-number>0</button>
+        <button data-number>.</button>
+        <button data-equals class="span-two">=</button>
     </section>
 
     <script src="main.js"></script>
 </body>
+
 </html>
