--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -13,8 +13,8 @@
 <body>
     <section class="container">
         <div class="output">
-            <div data-previousOperand class="previous-operand">123</div>
-            <div data-currentOperand class="current-operand">123</div>
+            <div data-previousOperand class="previous-operand"></div>
+            <div data-currentOperand class="current-operand"></div>
         </div>
         <button class="orange-btn" data-allCleared>AC</button>
         <button class="grey-btn" data-delete>DEL</button>
