--- a/CatGenerator/index.html
+++ b/CatGenerator/index.html
@@ -15,7 +15,7 @@
             <h4 class="card-title">Press this button to generate a cat</h4>
         </div>
         <div class="card-body">
-            <button type="button" class="btn btn-success" id="btn">Success</button>
+            <button type="button" class="btn btn-success" id="btn">Give me a cat</button>
         </div>
     </div>
     <div class="card-cat" id="cardCat">
